# cgraph

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  Configure.pl  Doxyfile  Doxyfile.base  Doxyfile.in  INSTALL  Makefile  Makefile.am  Makefile.mk  Makefile.sub  PKGBUILD  README.md  _B297A1BA56454C008CBA66F266C47F70.err  autogen.sh  cgraph.pc.in  compile.bat  compile.clj  compile.fish  compile.go  compile.groovy  compile.hs  compile.jl  compile.lisp  compile.lua  compile.p6  compile.pl  compile.pl6  compile.ps1  compile.py  compile.r  compile.rb  compile.scala  compile.sh  compile.tcl  compile.zsh  configure.ac  (+2 more)
doc/: Introduction.md  Makefile  Makefile.am  Makefile.mk  build-gtk-doc.sh  data.pl  headers.pl  independence.pl  sources.pl
include/: cgraph.h  cgraph_base.h  cgraph_bigint.h  cgraph_bigmat.h  cgraph_bigmat3d.h  cgraph_bignum.h  cgraph_bitset.h  cgraph_bool.h  cgraph_boolean.h  cgraph_cmdarg.h  cgraph_complex.h  cgraph_config.h  cgraph_data.h  cgraph_dframe.h  cgraph_dict.h  cgraph_error.h  cgraph_file.h  cgraph_float.h  cgraph_float128.h  cgraph_float16.h  cgraph_float32.h  cgraph_float64.h  cgraph_float8.h  cgraph_fraction.h  cgraph_game.h  cgraph_gobject.h  cgraph_graph.h  cgraph_hash.h  cgraph_hobject.h  cgraph_htable.h  cgraph_int.h  cgraph_int128.h  cgraph_int16.h  cgraph_int32.h  cgraph_int64.h  cgraph_int8.h  cgraph_integer.h  cgraph_line.h  cgraph_list.h  cgraph_logic.h  (+75 more)
julia/: README
m4/: ax_c_long_long.m4  ax_c_var_func.m4  ax_cache_size.m4  ax_compile_check_sizeof.m4  ax_create_stdint_h.m4  ax_valgrind_check.m4  m4_ax_zoneinfo.m4
perl/: Build.PL  Makefile.PL  README
python/: README  setup.py
r/: DESCRIPTION  README  bigint.R
script/: CMakeLists.txt  README  compile.bat  compile.c  compile.clj  compile.csh  compile.escript  compile.exs  compile.fish  compile.go  compile.groovy  compile.hs  compile.io  compile.java  compile.jl  compile.kts  compile.lisp  compile.lua  compile.mk  compile.ml  compile.nims  compile.ninja  compile.odin  compile.pl  compile.pl6  compile.ps1  compile.py  compile.r  compile.raku  compile.rb  compile.rs  compile.scala  compile.sh  compile.swift  compile.tcl  compile.ts  compile.vsh  compile.zig  compile.zsh  meson.build  (+1 more)
src/: Makefile  Makefile.am  Makefile.mk  bigint.c  bigmat.c  bigmat3d.c  bignum.c  bitset.c  bool.c  boolean.c  cmdarg.c  complex.c  data.c  data.templete  data_base.ct  dframe.c  dict.c  error.c  file.c  float.c  float.templete  float128.c  float16.c  float32.c  float64.c  float8.c  float_base.ct  float_base.tc  fraction.c  gobject.c  hobject.c  htable.c  int.c  int128.c  int16.c  int32.c  int64.c  int64.cT  int8.c  int_base.ct  (+50 more)
src/func/: Makefile.am  Makefile.mk  error.c  file.c  hash.c  math.c  memory.c  rand.c
src/game/: Makefile.am  Makefile.mk  cmdarg.c  sudoku.c  verilog.c
src/graph/: Makefile.am  Makefile.mk  st_graph.c
src/type/: Makefile.am  Makefile.mk  data.c  template_base.ct  template_cbuf.ct  template_data.ct  template_float.ct  template_float_soft.ct  template_int.ct  template_int_soft.ct  template_matrix.ct  template_matrix3d.ct  template_object.ct  template_point.ct  template_sint.ct  template_struct.ct
src/type/basic/: Makefile.am  Makefile.mk  bool.c  complex.c  float128.c  float16.c  float32.c  float64.c  float8.c  fraction.c  int.c  int128.c  int16.c  int32.c  int64.c  int8.c  logic.c  long.c  point2d.c  point3d.c  quat.c  time.c
src/type/data/: Makefile.am  Makefile.mk  bigint.c  bignum.c  bitset.c  string.c
src/type/object/: Makefile.am  Makefile.mk  gobject.c  hobject.c  m3object.c  mobject.c  object.c  snode.c
src/type/structure/: Makefile.am  Makefile.mk  bigmat.c  bigmat3d.c  dframe.c  dict.c  list.c  matrix.c  matrix3d.c  queue.c  set.c  spamat.c  spamat3d.c  tree.c  vector.c
test/: Makefile  Makefile.am  Makefile.mk  bigint.c  bigmat.c  bigmat3d.c  bignum.c  bitset.c  bool.c  cgraph  cgraph.c  cgraph.py  cgraph.r  cgraph.sql  complex.c  elements.csv  float.ct  float128.c  float16.c  float32.c  float64.c  float8.c  game.c  int.c  int.ct  int128.c  int16.c  int32.c  int64.c  int8.c  logic.c  long.c  matrix.c  matrix.ct  matrix3d.c  matrix3d.ct  spamat.c  spamat3d.c  string.c  test_float.ct  (+5 more)
tests/: Makefile.am  Makefile.mk  bigint.c  bigmat.c  bignum.c  bitset.c  cgraph.c  cgraph.r  float32.c  float64.c  fraction.c  int.c  int16.c  int32.c  int64.c  int8.c  logic.c  long.c  matrix.ct  point2d.c  point3d.c  spamat.c  string.c  test_float.ct  test_int.ct  test_point.ct  time.c  verilog.c  version.c
tools/: brief.json  cgraph.json  cgraph.json.in  enum2array.py  filelist.py  format.py  header.macro  header.py  header.txt  macro.py  run.bat  run.sh  script.py  stdchk.macro  template.py  template_check.macro  template_off.macro
tools/script/: CMakeLists.txt  README.md  compile.bat  compile.c  compile.ceylon  compile.clj  compile.cpp  compile.cr  compile.csh  compile.d  compile.escript  compile.exs  compile.f  compile.fish  compile.fpc  compile.go  compile.groovy  compile.hs  compile.html  compile.hx  compile.io  compile.java  compile.jl  compile.js  compile.ksh  compile.kts  compile.lisp  compile.lua  compile.mk  compile.ml  compile.nims  compile.ninja  compile.odin  compile.php  compile.pl  compile.ps1  compile.py  compile.r  compile.raku  compile.rb  (+19 more)
