noinst_LIBRARIES=libcgraph.a
AM_CPPFLAGS=-I$(top_srcdir)/include
libcgraph_a_LDFLAGS=-lm
libcgraph_a_SOURCES=bigint.c bigmat.c bigmat3d.c bignum.c bitset.c bool.c complex.c data.c dframe.c dict.c error.c file.c float32.c float64.c fraction.c gobject.c hobject.c int.c int16.c int32.c int64.c int8.c list.c long.c m3object.c math.c matrix.c matrix3d.c memory.c mobject.c object.c pobject.c spamat.c spamat3d.c string.c time.c vector.c verilog.c version.c